EPBDS dimension properties gap/overlap validation table fixes.

--- a/STUDIO/trunk/org.openl.rules.tableeditor/css/properties.css
+++ b/STUDIO/trunk/org.openl.rules.tableeditor/css/properties.css
@@ -16,6 +16,7 @@
 
 .te_props_group {
     border-bottom: 1px solid rgb(202,206,210);
+    width: 50%
 }
 
 .te_props_groupheader {
